<resources>
    <string name="app_name">Course05Task01</string>
    <string name="author">Сэр Макс</string>
    <string name="quote">Единственный ответ – ты всегда должен быть сильнее навязанных обстоятельств. Держаться за себя обеими руками. Помнить, кто ты есть и какой в тебе заключен смысл. Не особо задумываясь о том, спишь ты сейчас или бодрствуешь. Пока помнишь себя, это совершенно не важно.</string>
    <string name="comment">Напишите Ваш комментарий…</string>
    <string name="previous">Предыдущий</string>
    <string name="next">Следующий</string>
</resources>
