<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/MarginStyle">

            <ImageView
                android:id="@+id/ivIcon"
                style="@style/ImageCustomStyle"
                android:layout_width="128dp"
                android:layout_height="192dp"
                android:src="@drawable/sir_max"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/TextViewCaptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/tvQuote"
                    style="@style/TextViewQuoteStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/quote" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/bottom"
            style="@style/MarginStyle">

            <EditText
                android:id="@+id/etComment"
                style="@style/EditTextCommentStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/comment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle">

                <Button
                    android:id="@+id/btnPrevious"
                    style="@style/ButtonCustomStyle"
                    android:layout_height="wrap_content"
                    android:text="@string/previous" />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/ButtonCustomStyle"
                    android:layout_height="wrap_content"
                    android:text="@string/next" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
